--- a/front/src/Components/homePage/HomePage.css
+++ b/front/src/Components/homePage/HomePage.css
@@ -4,15 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-size: cover;
-  background-position: center;
-}
-
 .container-fluid {
   display: flex;
   height: 70%;
@@ -22,5 +13,16 @@ body {
 }
 
 .btn {
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 700;
   margin: 10px;
 }
