--- a/front/src/Components/Auth/loginForm/LoginForm.css
+++ b/front/src/Components/Auth/loginForm/LoginForm.css
@@ -45,11 +45,17 @@
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 40px;
+  color: #fff;
+
   padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
   color: #fff;
+}
+
+.input-box input:focus::placeholder {
+  opacity: 0;
 }
 
 .input-box .icon {
@@ -102,9 +108,10 @@
 }
 
 .register-link p a {
-  color: #fff;
+  color: #9584f1;
   text-decoration: none;
   font-weight: 600;
+  font-size: 17px;
 }
 
 .register-link p a:hover {
