--- a/front/src/Components/Auth/registerForm/Register.css
+++ b/front/src/Components/Auth/registerForm/Register.css
@@ -1,2 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.registerFormBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-size: cover;
+  background-position: center;
+}
 
+.registerFormWrapper {
+  width: 420px;
+  background-color: #201d1d;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(30px);
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 30px 40px;
+}
+
+.registerFormWrapper h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.registerFormWrapper .input-box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
