--- a/front/src/Components/Auth/loginForm/LoginForm.css
+++ b/front/src/Components/Auth/loginForm/LoginForm.css
@@ -10,8 +10,9 @@
   align-items: center;
   min-height: 100vh;
   min-width: 100vw;
-  background: url('../../../assets/background_LoginPage.jpg');
+  background: url('../../../assets/BackgroundImages/background_LoginPage.jpg');
   background-size: cover;
+  background-repeat:no-repeat;
   background-position: center;
 }
 
