--- a/front/src/Components/Auth/loginForm/LoginForm.css
+++ b/front/src/Components/Auth/loginForm/LoginForm.css
@@ -1,7 +1,27 @@
+:root {
+  --white: #ffffff;
+  --blue: #757f8e;
+  --bg: #3b3b3b;
+  --button: #3b71ca;
+  --car: #424242;
+  --gray-300: #cdcdcd;
+  --gray-400: #b4b4b4;
+  --gray-500: #9b9b9b;
+  --gray-600: #676767;
+  --gray-700: #424242;
+  --gray-750: #2f2f2f;
+  --gray-800: #212121;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.col .login {
+  display: flex;
+  justify-content: end;
 }
 
 .webBody {
@@ -9,25 +29,30 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  min-width: 100vw;
-  background: url('../../../assets/BackgroundImages/background_LoginPage.jpg');
+  background-color: var(--bg);
   background-size: cover;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
 .wrapper {
-  width: 420px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-700);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(30px);
   color: #fff;
   border-radius: 10px;
   padding: 30px 40px;
+  height: 100%;
 }
 
-.wrapper h1 {
+form {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.form_input .wrapper h1 {
   font-size: 36px;
   text-align: center;
 }
@@ -36,7 +61,7 @@
   position: relative;
   width: 100%;
   height: 50px;
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 .input-box input {
@@ -67,20 +92,14 @@
   font-size: 16px;
 }
 
-.wrapper .forgot-password {
-  display: flex;
-  justify-content: end;
-  font-size: 14.5px;
-  margin: -15px 0 15px;
-}
-
 .forgot-password label input {
   accent-color: #fff;
   margin-right: 4px;
 }
 
 .forgot-password a {
-  color: #fff;
+  color: --blue;
+  font-weight: bold;
   text-decoration: none;
 }
 
@@ -91,25 +110,24 @@
 .wrapper button {
   width: 100%;
   height: 45px;
-  background: #fff;
+  background-color: var(--button);
   border: none;
   outline: none;
   border-radius: 40px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
   cursor: pointer;
   font-size: 16px;
-  color: #333;
+  color: var(--white);
   font-weight: 700;
 }
 
 .wrapper .register-link {
   font-size: 14.5px;
-  text-align: center;
+  text-align: end;
   margin: 20px 15px;
 }
 
 .register-link p a {
-  color: #9584f1;
+  color: --blue;
   text-decoration: none;
   font-weight: 600;
   font-size: 17px;
@@ -117,4 +135,42 @@
 
 .register-link p a:hover {
   text-decoration: underline;
+}
+
+.info {
+  color: var(--white);
+  border-radius: 1rem;
+}
+.row-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.info h1 {
+  color: var(--white);
+  border-radius: 1rem;
+  font-weight: bold;
+}
+
+.gradient-custom {
+  /* fallback for old browsers */
+  background: #95b5ea;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to bottom,
+    rgba(149, 181, 234, 0.3),
+    rgba(174, 208, 224, 0.3)
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to bottom,
+    rgba(149, 181, 234, 0.3),
+    rgba(174, 208, 224, 0.3)
+  );
+}
+
+.info p {
+  line-height: 1.6rem;
 }
