--- a/front/src/Components/homePage/HomePage.css
+++ b/front/src/Components/homePage/HomePage.css
@@ -1,28 +1,84 @@
+:root {
+  --white: #ffffff;
+  --blue: #757f8e;
+  --bg: #3b3b3b;
+  --button: #3b71ca;
+  --car: #424242;
+  --gray-300: #cdcdcd;
+  --gray-400: #b4b4b4;
+  --gray-500: #9b9b9b;
+  --gray-600: #676767;
+  --gray-700: #424242;
+  --gray-750: #2f2f2f;
+  --gray-800: #212121;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.homeContainer {
+.homeBody {
   display: flex;
-  height: 70%;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  color: #fff;
+  min-height: 100vh;
+  background-color: var(--bg);
 }
 
-.btn {
-  width: 100%;
-  height: 45px;
-  background: #fff;
+.homeContainer {
+  background-color: var(--gray-750);
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 600px;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.homeContainer h1 {
+  color: var(--gray-300);
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+.homeContainer h1 .brand-name {
+  color: var(--button);
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+.homeContainer p {
+  color: var(--white);
+  margin-bottom: 25px;
+  font-size: 1rem;
+}
+
+.home-warpper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+button.btn {
+  padding: 10px 20px;
+  font-size: 1.1rem;
+  font-weight: bold;
   border: none;
-  outline: none;
-  border-radius: 40px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
-  color: #333;
-  font-weight: 700;
-  margin: 10px;
+  transition: background-color 0.3s ease;
+}
+
+button.btn-primary {
+  background-color: var(--button);
+  color: var(--gray-300);
+}
+
+button.btn-primary:hover {
+  background-color: var(--gray-500);
+}
+
+button.btn-primary:active {
+  background-color: var(--gray-400);
 }
