--- a/front/src/Components/guestPage/cart/Cart.css
+++ b/front/src/Components/guestPage/cart/Cart.css
@@ -1,3 +1,19 @@
+:root {
+  --white: #ffffff;
+  --blue: #757f8e;
+  --bg: #3b3b3b;
+  --button: #3b71ca;
+  --car: #424242;
+  --gray-300: #cdcdcd;
+  --gray-400: #b4b4b4;
+  --gray-500: #9b9b9b;
+  --gray-600: #676767;
+  --gray-700: #424242;
+  --gray-750: #2f2f2f;
+  --gray-800: #212121;
+  --success: #28a745;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,12 +34,35 @@
 }
 
 .table-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.table-box {
   width: 90vw;
 }
 
+tr th {
+  font-size: 1.3rem;
+  text-align: center;
+}
+.bin {
+  text-align: center;
+}
+.img-wrapper {
+  padding: 0 !important;
+  text-align: center;
+}
+
+tbody tr {
+  width: 5rem;
+}
+
 .cart-img {
-  width: 7rem;
-  height: 7rem;
+  width: 10rem;
+  height: 10rem;
 }
 
 .productRow td {
@@ -36,5 +75,5 @@
 
 .table th,
 .table td {
-  max-width: 200px;
+  min-width: 200px;
 }
