--- a/front/src/Components/waiterPage/WaiterPage.css
+++ b/front/src/Components/waiterPage/WaiterPage.css
@@ -2,3 +2,16 @@
   margin-left: 1rem;
   margin-right: 2rem;
 }
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 1000;
+}
