--- a/front/src/Components/Auth/loginForm/LoginForm.css
+++ b/front/src/Components/Auth/loginForm/LoginForm.css
@@ -153,17 +153,14 @@ form {
 }
 
 .gradient-custom {
-  /* fallback for old browsers */
   background: #95b5ea;
 
-  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-linear-gradient(
     to bottom,
     rgba(149, 181, 234, 0.3),
     rgba(174, 208, 224, 0.3)
   );
 
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(
     to bottom,
     rgba(149, 181, 234, 0.3),
@@ -173,4 +170,14 @@ form {
 
 .info p {
   line-height: 1.6rem;
+}
+
+@media (max-width: 992px) {
+  .card_history p {
+    font-size: 1rem;
+  }
+
+  .card_history h1 {
+    font-size: 1.5rem;
+  }
 }
