--- a/front/src/Components/Auth/passwordRestartForm/emailRestart/EmailRestart.css
+++ b/front/src/Components/Auth/passwordRestartForm/emailRestart/EmailRestart.css
@@ -1,3 +1,18 @@
+:root {
+  --white: #ffffff;
+  --blue: #757f8e;
+  --bg: #3b3b3b;
+  --button: #3b71ca;
+  --car: #424242;
+  --gray-300: #cdcdcd;
+  --gray-400: #b4b4b4;
+  --gray-500: #9b9b9b;
+  --gray-600: #676767;
+  --gray-700: #424242;
+  --gray-750: #2f2f2f;
+  --gray-800: #212121;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +24,25 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  min-width: 100vw;
+  background-color: var(--bg);
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
+}
+
+.emailBody form h1 {
+  color: white;
+}
+
+.emailBody form .input-box {
+  margin: 10px;
+}
+
+.emailBody .card-mail {
+  padding: 20px;
+  width: 65%;
+  height: 40vh;
+  border-radius: 10px;
+  background-color: var(--gray-700);
+  box-shadow: -4px -2px 67px -5px rgb(90, 91, 95);
 }
