--- a/front/src/Components/guestPage/GuestPage.css
+++ b/front/src/Components/guestPage/GuestPage.css
@@ -66,6 +66,7 @@
   border: #212121 1px solid;
   width: 2rem;
   height: 2rem;
+  background-color: transparent;
 }
 
 .quantity {
@@ -91,6 +92,7 @@
 .bag-button {
   border: none;
   font-size: 1.8rem;
+  background-color: transparent;
 }
 
 @media (max-width: 1100px) {
@@ -141,4 +143,26 @@
   .inf-box {
     width: 65%;
   }
+}
+
+@keyframes slide-fwd-center {
+  0% {
+    transform: translateZ(0) scale(0.9);
+    opacity: 0;
+    color: #28a745;
+  }
+  100% {
+    transform: translateZ(50px) scale(6);
+    opacity: 1;
+    color: #236833;
+  }
+}
+
+#slide-fwd-center {
+  display: inline-block;
+  animation: slide-fwd-center 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.loading-h {
+  margin-top: 2.5rem;
 }
